# aoc-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  lefthook.yaml
.cargo/: config.toml
.github/workflows/: rust.yaml
crates/aoc/: Cargo.toml
crates/aoc/src/: lib.rs  main.rs  puzzles.rs  years.rs
crates/aoc/src/cli/: arguments.rs  error.rs  mod.rs  options.rs
crates/aoc/src/cli/mode/: default.rs  mod.rs  stdin.rs  test.rs
crates/aoc/src/cli/mode/test/: error.rs  manager.rs  mpmc.rs  oneshot.rs  output_grid.rs  process.rs  puzzle.rs  test_case.rs  thread.rs
crates/aoc_wasm/: Cargo.toml
crates/aoc_wasm/src/: custom_sections.rs  lib.rs  multithreading.rs
crates/aoc_wasm/web/: aoc.mjs  cross-origin-isolation-service-worker.js  index.html  web.mjs  worker.mjs
crates/utils/: Cargo.toml
crates/utils/benches/: md5.rs
crates/utils/src/: array.rs  ascii.rs  bit.rs  date.rs  disjoint_set.rs  enum.rs  error.rs  framework.rs  geometry.rs  graph.rs  grid.rs  hash.rs  input.rs  lib.rs  multithreading.rs  multithreading_wasm.rs  multiversion.rs  number.rs  point.rs  queue.rs  slice.rs  str.rs
crates/utils/src/md5/: bruteforce.rs  mod.rs  tests.rs
crates/utils/src/multithreading/: impl_native.rs  impl_wasm_scoped.rs  impl_wasm_stub.rs  mod.rs  scoped_tasks.rs
crates/utils/src/parser/: base.rs  combinator.rs  error.rs  iterator.rs  leaf.rs  macros.rs  mod.rs  number.rs  one_of.rs  simple.rs  then.rs  tinystr.rs
crates/utils/src/simd/: array.rs  avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs
crates/utils/src/wasm/: mod.rs  multithreading_wasm.rs  scoped_tasks.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cmd.rs  common.rs  main.rs
crates/xtask/src/cmd/: input.rs  new.rs  update.rs  wait.rs  web.rs
crates/year2015/: Cargo.toml  README.md
crates/year2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
crates/year2016/: Cargo.toml  README.md
crates/year2016/src/: assembunny.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
crates/year2017/: Cargo.toml  README.md
crates/year2017/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  knot_hash.rs  lib.rs
crates/year2018/: Cargo.toml
crates/year2018/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  elfcode.rs  lib.rs
crates/year2019/: Cargo.toml
crates/year2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  intcode.rs  lib.rs
crates/year2020/: Cargo.toml
crates/year2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  lib.rs
crates/year2024/: Cargo.toml  README.md
crates/year2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
crates/year2025/: Cargo.toml  README.md
crates/year2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
