[workspace]
members = ["crates/*"]
resolver = "2"
# Exclude xtask so there is only one binary (aoc), meaning it doesn't have to be specified when using cargo run
default-members = ["crates/aoc", "crates/utils", "crates/year*"]

[workspace.package]
authors = ["Ethan Jones <ictrobot@outlook.com>"]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/ictrobot/aoc-rs"
rust-version = "1.85.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "deny"
dbg_macro = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
print_stderr = "warn"
print_stdout = "warn"

[profile.release]
debug = "limited"
