[package]
name = "aoc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
utils = { path = "../utils" }
# xtask update dependencies
year2015 = { path = "../year2015", optional = true }

[features]
default = ["all-years", "unsafe"]
# xtask update features
all-years = ["year2015"]
unsafe = ["year2015?/unsafe", "utils/unsafe"]

[lints]
workspace = true
