[package]
name = "aoc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
utils = { path = "../utils" }
# xtask update dependencies
year2015 = { path = "../year2015", optional = true }
year2016 = { path = "../year2016", optional = true }
year2017 = { path = "../year2017", optional = true }
year2024 = { path = "../year2024", optional = true }

[features]
default = ["all-years", "unsafe"]
const_lut = ["year2024?/const_lut"]
# xtask update features
all-years = ["year2015", "year2016", "year2017", "year2024"]
unsafe = ["year2015?/unsafe", "year2016?/unsafe", "year2017?/unsafe", "year2024?/unsafe", "utils/unsafe"]

[lints]
workspace = true
