[package]
name = "aoc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
utils = { path = "../utils", default-features = false }
# xtask update dependencies
year2015 = { path = "../year2015", optional = true }
year2016 = { path = "../year2016", optional = true }
year2017 = { path = "../year2017", optional = true }
year2018 = { path = "../year2018", optional = true }
year2019 = { path = "../year2019", optional = true }
year2024 = { path = "../year2024", optional = true }

[features]
default = ["all-years", "all-simd", "unsafe", "test-runner"]
const_lut = ["year2024?/const_lut"]
all-simd = ["utils/all-simd"]
test-runner = []
# xtask update features
all-years = ["year2015", "year2016", "year2017", "year2018", "year2019", "year2024"]
unsafe = ["year2015?/unsafe", "year2016?/unsafe", "year2017?/unsafe", "year2018?/unsafe", "year2019?/unsafe", "year2024?/unsafe", "utils/unsafe"]

[lints]
workspace = true
