[package]
name = "aoc_wasm"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Don't enable all-simd feature to avoid including array4096 implementation
aoc = { path = "../aoc", default-features = false, features = ["unsafe", "all-years"] }
utils = { path = "../utils", default-features = false }

[features]
multithreading = ["utils/wasm-multithreading"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
