[package]
name = "utils"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

[features]
unsafe = []
wasm-multithreading = ["unsafe"]

[lints]
workspace = true
