[package]
name = "utils"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

[features]
default = ["unsafe", "all-simd"]
unsafe = []
all-simd = []
wasm-multithreading = ["unsafe"]

[lints]
workspace = true

[[bench]]
name = "md5"
harness = false
